--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-game/resources/graphics/textures/environment.env
-game/resources/graphics/levels/level_1/map.babylon
-game/resources/graphics/characters/palyer.glb
+game/resources/graphics/*
